--- a/guitarla-strapi/package.json
+++ b/guitarla-strapi/package.json
@@ -11,9 +11,10 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.11.2",
-    "@strapi/plugin-users-permissions": "4.11.2",
     "@strapi/plugin-i18n": "4.11.2",
+    "@strapi/plugin-users-permissions": "4.11.2",
+    "@strapi/provider-upload-cloudinary": "^4.11.2",
+    "@strapi/strapi": "4.11.2",
     "pg": "8.8.0"
   },
   "author": {
